# anti12306/backend/main.py
@@ -22,7 +22,7 @@
 
 REPLAY_TIMEOUT = 15
 
-from flask import Flask, jsonify, request, make_response
+from flask import Flask, jsonify, request, make_response, abort
 from dbop import *
 from respmodel import *
 from userop import *
@@ -33,6 +33,11 @@ app = Flask(__name__)
 
 global db_session
 db_session = create_db_conn()
+
+
+@app.route('/api/user/getHistory', methods=['GET'])
+def get_recog_history():
+    pass
 
 
 @app.route('/api/user/login', methods=['POST'])
@@ -47,6 +52,7 @@ def userlog():
 
 @app.route('/api/startOCR', methods=['POST'])
 def batch_ocr2Text():
+    #TODO: Get user balance, must > 150 coins
     # Get OCR result of uploaded photo
     # photo is a base64 encoded string
     photo_b64 = request.form['photo']
@@ -54,10 +60,9 @@ def batch_ocr2Text():
     # Credential check
 
 
-
 @app.route('/api/user/logout', methods=['GET'])
 def logout():
-    revoked_token = request.headers['X-User-Token']
+    pass
 
 
 @app.route('/api/user/createOrder', methods=['POST'])
@@ -71,23 +76,21 @@ def createOrd():
 @app.route('/api/user/checkOrder', methods=['GET'])
 def checkOrd():
     orderID = request.form['orderID']
-
-
-@app.route('/api/user/checkBalance', methods=['GET'])
-def batch_balance():
-    user_auth = check_batcredential(request)
-    if user_auth[1] >= 0:
-        current_user = get_userstats(user_auth)
-        return make_response(jsonify(
-            userStats()
-        ))
-    else:
-        return make_response(jsonify(errResponse(-1, "No valid credential")), 403)
+    # TODO TO-BE-FINISHED
 
 
 @app.route('/api/user/getUser', methods=['GET'])
 def dashboard_usr():
-    usr_token = request.headers['X-User-Token']
+    user_auth = check_batcredential(request)
+    if user_auth[1] >= 0:
+        current_user = get_userstats(user_auth)
+        return make_response(jsonify(
+            userStats(current_user.username, current_user.is_vip,
+                      current_user.apikey, current_user.balance,
+                      current_user.break_law)
+        ), 200)
+    else:
+        return make_response(jsonify(errResponse(-1, "No valid credential")), 403)
 
 
 @app.route('/api/report/error', methods=['POST'])
@@ -116,21 +119,84 @@ def incorrect_recg():
 
 @app.route('/api/admin/review', methods=['GET'])
 def review_report():
+    from base64 import b64encode
     user_auth = check_batcredential(request)
+    if user_auth[1] == 9:
+        waiting_to_review = db_session.query(UploadEvent).filter_by(UploadEvent.status == 4).all()
+        if len(waiting_to_review) > 0:
+            resultdict = {
+                "retcode": 0,
+                "uploadevents": []
+            }
+            for events in waiting_to_review:
+                photo_data = "data:image/png;base64," + b64encode(open("userimgs/" + events.eventid + ".png", "rb").read()).decode()
+                eachEvent = {"eventid": events.eventid, "photo": photo_data}
+                resultdict["uploadevents"].append(eachEvent)
+            return make_response(jsonify(resultdict), 200)
+        else:
+            return make_response(jsonify(errResponse(0, "No events waiting to be reviewed.")), 200)
+    else:
+        return make_response(jsonify(errResponse(-1, "No valid credential")), 403)
+
+
+@app.route('/api/admin/review', methods=['POST'])
+def admin_approve():
+    user_auth = check_batcredential(request)
+    if user_auth[1] == 9:
+        eventid = request.form['eventid']
+        modified = db_session.query(UploadEvent).filter_by(UploadEvent.eventid == eventid).one()
+        modified.status = 2
+        db_session.commit()
+        return make_response(jsonify(errResponse(0, "Proceeded.")), 200)
+    else:
+        return make_response(jsonify(errResponse(-1, "No valid credential")), 403)
+
+
+@app.route('/api/cron', methods=['POST'])
+def cronjob():
+    # This is used for daily job, cleanup user session and refund
+    authed_site = request.headers["Origin"]
+    if authed_site == "127.0.0.1" and request.user_agent[:6] == "curl/7":
+        # Clean expired user session on the frontend
+        all_sessions = db_session.query(Session).all()
+        if len(all_sessions) > 0:
+            toexpire = []
+            for sess in all_sessions:
+                if sess.timestamp - int(time()) > TOKEN_EXPIRE_TIME:
+                    toexpire.append(sess)
+            for expired in toexpire:
+                db_session.delete(expired)
+            db_session.commit()
+        else:
+            pass
+        # Refund will be done in each day 24:00
+        all_failed_recognition = db_session.query(UploadEvent).filter_by(UploadEvent.status == 2).all()
+        if len(all_failed_recognition) > 0:
+            # get user id
+            for event in all_failed_recognition:
+                corresponding_user = db_session.query(User).filter_by(User.username == event.username).one()
+                VIP_identify = corresponding_user.is_vip
+                refund_cost = 0.0
+                if VIP_identify > 0:
+                    refund_cost = event.chnchars * 0.7 * 15
+                else:
+                    refund_cost = event.chnchars * 1.0 * 15
+                corresponding_user.balance += refund_cost
+                db_session.commit()
+        else:
+            pass
+    else:
+        abort(403)
 
 
 @app.route('/api/payment/callback', methods=['POST'])
 def recv_payment_callback():
-    # This route is preserved for webhook to receive the response of
-    # the callback after payment successfully finished.
-    #
-    # Always successful for test.
     return make_response(jsonify(errResponse(-1, "Under Construction")), 200)
 
 
 @app.teardown_appcontext
-def shutdown_session(exception=None):
+def shutdown_dbpool(exception=None):
     db_exit(db_session)
 
 
-app.run(host='0.0.0.0', port=8080, debug=False)
+app.run(host='0.0.0.0', port=8080, debug=True)
